better separation of component and cpp host folder, c host to be done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "xstring": "cpp",
         "xutility": "cpp",
         "dbj-component.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "iosfwd": "cpp"
     }
 }
