--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "xutility": "cpp",
         "dbj-component.h": "c",
         "string.h": "c",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "default_log.h": "c",
+        "cdebug.h": "c",
+        "ccommon.h": "c"
     }
 }
