secure dll loading and call locking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,6 @@
         "default_log.h": "c",
         "cdebug.h": "c",
         "ccommon.h": "c"
-    }
-
-
+    },
+    "editor.formatOnSave": true
 }
