--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "cdebug.h": "c",
         "ccommon.h": "c",
         "xlocbuf": "c",
-        "decimal_from.h": "c"
+        "decimal_from.h": "c",
+        "dbj-light-loader.h": "c"
     },
     "editor.formatOnSave": true
 }
