--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "ccommon.h": "c",
         "xlocbuf": "c",
         "decimal_from.h": "c",
-        "dbj-light-loader.h": "c"
+        "dbj-light-loader.h": "c",
+        "ubench.h": "c"
     },
     "editor.formatOnSave": true
 }
